third_party/rust/extend/tests/compile_fail/double_vis.stderr
error: Cannot set visibility on `#[ext]` and `impl` block
 --> $DIR/double_vis.rs:4:11
  |
4 |     #[ext(pub(super))]
  |           ^^^
